# TaskManager

./: README.MD  pyproject.toml
src/: LICENSE  data.json  main.py
src/task_manager/: main.py  module_task_manager.py  task_manager.py
src/task_manager/data/: data.json
src/tests/: test_task_manager.py
tests/: test_task_manager.py
