[tool.poetry]
name = "taskmanage"
version = "0.1.0"
description = "A test task aimed at assessing the level of skills."
authors = ["LostUnion <nsk.19980513@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
